<resources>
    <string name="app_name">Heron Safe App</string>
    <string name="cdLogoSplashScreen">Logo Splash Screen</string>
    <string name="cdLogoStartUp">Logo Start Up</string>
    <string name="cdStartUpIllus">Illustration StartUp</string>
    <string name="subtextStartUp">A Covid-19 Screening \nApplication for Students</string>
    <string name="btLoginStartUp">LOGIN</string>
    <string name="btRegisterStartUp">REGISTER</string>
    <string name="textLogin">Login</string>
    <string name="textRegister">Register</string>
    <string name="subtextLogin">Welcome back!\nYou\'ve been missed!</string>
    <string name="subtextRegister">Hello!\nSign Up to get started!</string>
    <string name="cdBtnBack">Back</string>
    <string name="cdLogo">Logo Heron Safe</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintFullname">Full Name</string>
    <string name="hintStudentID">Student ID Number</string>
    <string name="hintContactNumber">Contact Number</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="greetDashboard">Good Morning,</string>
    <string name="dashboardUsername">Username!</string>
    <string name="dashboardStatus">You are in good condition.</string>
    <string name="cdProfile">Profile Picture</string>
    <string name="dbHome">Home</string>
    <string name="dbNotif">Notification</string>
    <string name="dbContacts">Contacts</string>
    <string name="dbProfile">Profile</string>
    <string name="dbHealthScreening">Health Screening</string>
    <string name="dbExposures">Exposures</string>
    <string name="dbAnnounce">Announcements</string>
    <string name="dbHealthAdv">Health Advices</string>
    <string name="act_contacts">Contacts</string>
    <string name="act_exposures">Exposures</string>
    <string name="act_health_advices">Health Advices</string>
    <string name="act_health_screening">Health Screening</string>
    <string name="act_notifications">Notifications</string>
    <string name="act_profile">Profile</string>
    <string name="act_announcements">Announcements</string>
    <string name="history">Screening History</string>
    <string name="gender">Gender</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="email_address">Email Address</string>
    <string name="department">Department</string>
    <string-array name="if_vaccined">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="vaccines">
        <item>Pfizer</item>
        <item>Moderna</item>
        <item>Astra Zeneca</item>
        <item>Sinovac</item>
    </string-array>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>