<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/btnBackLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:contentDescription="@string/cdBtnBack"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_icon_arrow_back" />


    <ImageView
        android:id="@+id/ivLogoLogin"
        android:contentDescription="@string/cdLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        android:layout_toEndOf="@id/btnBackLogin"
        android:layout_marginTop="35dp"
        android:layout_marginStart="150dp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackLogin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/textLogin"
        android:textColor="@color/yellow"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/illusLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/illustration_login" />

    <TextView
        android:id="@+id/tvSubtextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illusLogin"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="start"
        android:lines="2"
        android:text="@string/subtextLogin"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        android:layout_below="@id/tvSubtextLogin"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayoutEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/righteous_regular"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:visibility="gone"
        android:layout_below="@id/txtLayoutPassword"
        android:layout_centerHorizontal="true" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="335dp"
        android:background="@drawable/btn_startup1"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/textLogin"
        android:textColor="@color/yellow"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/notAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_yet"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"/>

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/notAMember"
        android:text="@string/register_now"
        android:textColor="@color/blue" />
</RelativeLayout>