<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBackRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:contentDescription="@string/cdBtnBack"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_icon_arrow_back" />

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:contentDescription="@string/cdLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        android:layout_toEndOf="@id/btnBackRegistration"
        android:layout_marginTop="35dp"
        android:layout_marginStart="150dp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackRegistration"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/textRegister"
        android:textColor="@color/yellow"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvSubtextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegister"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="start"
        android:lines="2"
        android:text="@string/subtextRegister"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutFName"
        android:layout_below="@id/tvSubtextRegister"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_outline_person_24"
            android:drawablePadding="5dp"
            android:id="@+id/etRegisterFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintFullname"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutStudentID"
        android:layout_below="@id/txtLayoutFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_outline_person_pin_24"
            android:drawablePadding="5dp"
            android:id="@+id/etRegisterStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintStudentID"
            android:inputType="textEmailAddress|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        android:layout_below="@id/txtLayoutStudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="5dp"
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintEmail"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutContactNum"
        android:layout_below="@id/txtLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterContactNum"
            android:drawableStart="@drawable/ic_outline_smartphone_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintContactNumber"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        android:layout_below="@id/txtLayoutContactNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPassword"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/yellow"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:visibility="gone"
        android:layout_below="@id/txtLayoutPassword"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="335dp"
        android:background="@drawable/btn_startup1"
        android:fontFamily="@font/righteous_regular"
        android:text="@string/textRegister"
        android:textColor="@color/yellow"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/alreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/already_have_an_account"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/alreadyHave"
        android:text="@string/sign_in"
        android:textColor="@color/blue" />

</RelativeLayout>